--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,23 @@
 language: python
+sudo: false
 python:
+  - "2.6"
   - "2.7"
 env:
-  - KOTTI_TEST_DB_STRING=postgresql://postgres@localhost:5432/kotti_boxes_testing
-  - KOTTI_TEST_DB_STRING=mysql+oursql://root@localhost:3306/kotti_boxes_testing
+  - KOTTI_TEST_DB_STRING=postgresql://postgres@localhost:5432/kotti_testing
+  - KOTTI_TEST_DB_STRING=mysql+oursql://root@localhost:3306/kotti_testing
   - KOTTI_TEST_DB_STRING=sqlite://
 install:
-  - pip install "pip==1.3.1"  # fix issue with fanstatic==1.0a
-  - pip install psycopg2 oursql
-  - pip install -e . -r https://raw.github.com/Kotti/Kotti/stable/requirements.txt
-  - pip install "Kotti==1.0.0-alpha.4"
-  - pip install "wsgi_intercept==0.5.1"
-  - python setup.py devbefore_script:
-  - psql -c 'create database kotti_boxes_testing;' -U postgres
-  - mysql -e 'create database kotti_boxes_testing;'
-script: py.test --tb=native --cov=kotti --cov-report=term-missing
+  - travis_retry pip install "pip==1.3.1"  # fix issue with fanstatic==1.0a
+  - travis_retry pip install -e . -r https://raw.github.com/Kotti/Kotti/stable/requirements.txt --use-mirrors
+  - pip uninstall -y Kotti
+  - python setup.py develop
+  - python setup.py dev
+  - travis_retry pip install psycopg2 oursql python-coveralls
+before_script:
+  - psql -c 'create database kotti_testing;' -U postgres
+  - mysql -e 'create database kotti_testing;'
+script:
+  - py.test --runslow --tb=native --cov=kotti --cov-report=term-missing
+after_success:
+  - coveralls
