--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,6 @@ before_script:
   - psql -c 'create database kotti_testing;' -U postgres
   - mysql -e 'create database kotti_testing;'
 script:
-  - py.test --runslow --tb=native --cov=kotti --cov-report=term-missing
+  - py.test --tb=native --cov=kotti --cov-report=term-missing
 after_success:
   - coveralls
