--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ python:
   - "2.6"
   - "2.7"
 env:
-  - KOTTI_TEST_DB_STRING=postgresql://postgres@localhost:5432/kotti_boxes_testing
-  - KOTTI_TEST_DB_STRING=mysql+oursql://root@localhost:3306/kotti_boxes_testing
+  - KOTTI_TEST_DB_STRING=postgresql://postgres@localhost:5432/kotti_testing
+  - KOTTI_TEST_DB_STRING=mysql+oursql://root@localhost:3306/kotti_testing
   - KOTTI_TEST_DB_STRING=sqlite://
 install:
   - travis_retry pip install "pip==1.3.1"  # fix issue with fanstatic==1.0a
